flutter_lua_bridge/src/flutter_lua_bridge.h

/* ================================================================
 * C API 函数声明
 * ================================================================ */

typedef struct lua_State lua_State;
/* lua_touserdata */
void* flutter_lua_bridge_touserdata(lua_State* L, int idx);
/* lua_type */
int flutter_lua_bridge_type(lua_State* L, int idx);
/* lua_typename */
const char* flutter_lua_bridge_typename(lua_State* L, int tp);
/* lua_upvalueid */
void* flutter_lua_bridge_upvalueid(lua_State* L, int fidx, int n);
/* lua_upvalueindex */
int flutter_lua_bridge_upvalueindex(int i);
/* lua_upvaluejoin */
void flutter_lua_bridge_upvaluejoin(lua_State* L, int fidx1, int n1, int fidx2, int n2);
/* lua_version */
double flutter_lua_bridge_version(lua_State* L);
/* lua_warning */
void flutter_lua_bridge_warning(lua_State* L, const char* msg, int tocont);
/* lua_xmove */
void flutter_lua_bridge_xmove(lua_State* from, lua_State* to, int n);
/* lua_yield */
int flutter_lua_bridge_yield(lua_State* L, int nresults);
/* lua_yieldk */
int flutter_lua_bridge_yieldk(lua_State* L, int nresults, int ctx, void* k);
/* ================================================================
 * Auxlib API 函数声明
 * ================================================================ */

/* luaL_addchar */
void flutter_lua_bridgeL_addchar(void* B, char c);
/* luaL_addgsub */
void flutter_lua_bridgeL_addgsub(void* B, const char* s, const char* p, const char* r);
/* luaL_addlstring */
void flutter_lua_bridgeL_addlstring(void* B, const char* s, size_t l);
/* luaL_addsize */
void flutter_lua_bridgeL_addsize(void* B, size_t n);
/* luaL_addstring */
void flutter_lua_bridgeL_addstring(void* B, const char* s);
/* luaL_addvalue */
void flutter_lua_bridgeL_addvalue(void* B);
/* luaL_alloc */
void* flutter_lua_bridgeL_alloc(void* ud, void* ptr, size_t osize, size_t nsize);
/* luaL_argcheck */
void flutter_lua_bridgeL_argcheck(lua_State* L, int cond, int arg, const char* extramsg);
/* luaL_argerror */
int flutter_lua_bridgeL_argerror(lua_State* L, int arg, const char* extramsg);
/* luaL_argexpected */
void flutter_lua_bridgeL_argexpected(lua_State* L, int cond, int arg, const char* tname);
/* luaL_buffaddr */
char* flutter_lua_bridgeL_buffaddr(void* B);
/* luaL_buffinit */
void flutter_lua_bridgeL_buffinit(lua_State* L, void* B);
/* luaL_buffinitsize */
char* flutter_lua_bridgeL_buffinitsize(lua_State* L, void* B, size_t sz);
/* luaL_bufflen */
size_t flutter_lua_bridgeL_bufflen(void* B);
/* luaL_buffsub */
void flutter_lua_bridgeL_buffsub(void* B, int n);
/* luaL_callmeta */
int flutter_lua_bridgeL_callmeta(lua_State* L, int obj, const char* e);
/* luaL_checkany */
void flutter_lua_bridgeL_checkany(lua_State* L, int arg);
/* luaL_checkinteger */
int64_t flutter_lua_bridgeL_checkinteger(lua_State* L, int arg);
/* luaL_checklstring */
const char* flutter_lua_bridgeL_checklstring(lua_State* L, int arg, size_t* l);
/* luaL_checknumber */
double flutter_lua_bridgeL_checknumber(lua_State* L, int arg);
/* luaL_checkoption */
int flutter_lua_bridgeL_checkoption(lua_State* L, int arg, const char* def, const char* const lst[]);
/* luaL_checkstack */
void flutter_lua_bridgeL_checkstack(lua_State* L, int sz, const char* msg);
/* luaL_checkstring */
const char* flutter_lua_bridgeL_checkstring(lua_State* L, int arg);
/* luaL_checktype */
void flutter_lua_bridgeL_checktype(lua_State* L, int arg, int t);
/* luaL_checkudata */
void* flutter_lua_bridgeL_checkudata(lua_State* L, int ud, const char* tname);
/* luaL_checkversion */
void flutter_lua_bridgeL_checkversion(lua_State* L);
/* luaL_dofile */
int flutter_lua_bridgeL_dofile(lua_State* L, const char* fn);
/* luaL_dostring */
int flutter_lua_bridgeL_dostring(lua_State* L, const char* s);
/* luaL_error */
int flutter_lua_bridgeL_error(lua_State* L, const char* fmt);
/* luaL_execresult */
int flutter_lua_bridgeL_execresult(lua_State* L, int stat);
/* luaL_fileresult */
int flutter_lua_bridgeL_fileresult(lua_State* L, int stat, const char* fname);
/* luaL_getmetafield */
int flutter_lua_bridgeL_getmetafield(lua_State* L, int obj, const char* e);
/* luaL_getmetatable */
int flutter_lua_bridgeL_getmetatable(lua_State* L, const char* tname);
/* luaL_getsubtable */
int flutter_lua_bridgeL_getsubtable(lua_State* L, int idx, const char* fname);
/* luaL_gsub */
const char* flutter_lua_bridgeL_gsub(lua_State* L, const char* s, const char* p, const char* r);
/* luaL_len */
int64_t flutter_lua_bridgeL_len(lua_State* L, int idx);
/* luaL_loadbuffer */
int flutter_lua_bridgeL_loadbuffer(lua_State* L, const char* buff, size_t sz, const char* name);
/* luaL_loadbufferx */
int flutter_lua_bridgeL_loadbufferx(lua_State* L, const char* buff, size_t sz, const char* name, const char* mode);
/* luaL_loadfile */
int flutter_lua_bridgeL_loadfile(lua_State* L, const char* filename);
/* luaL_loadfilex */
int flutter_lua_bridgeL_loadfilex(lua_State* L, const char* filename, const char* mode);
/* luaL_loadstring */
int flutter_lua_bridgeL_loadstring(lua_State* L, const char* s);
/* luaL_makeseed */
uint64_t flutter_lua_bridgeL_makeseed(lua_State* L);
/* luaL_newlib */
void flutter_lua_bridgeL_newlib(lua_State* L, void* l, int nrec);
/* luaL_newlibtable */
void flutter_lua_bridgeL_newlibtable(lua_State* L, int nrec);