flutter_lua_bridge/lib/src/gen/flutter_lua_bridge.g.dart


/// lua_touserdata
@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<lua_State>, ffi.Int)>()
external ffi.Pointer<ffi.Void> flutter_lua_bridge_touserdata(
  ffi.Pointer<lua_State> L,
  int idx,
);

/// lua_type
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_type(ffi.Pointer<lua_State> L, int idx);

/// lua_typename
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<lua_State>, ffi.Int)>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_typename(
  ffi.Pointer<lua_State> L,
  int tp,
);

/// lua_upvalueid
@ffi.Native<
  ffi.Pointer<ffi.Void> Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)
>()
external ffi.Pointer<ffi.Void> flutter_lua_bridge_upvalueid(
  ffi.Pointer<lua_State> L,
  int fidx,
  int n,
);

/// lua_upvalueindex
@ffi.Native<ffi.Int Function(ffi.Int)>()
external int flutter_lua_bridge_upvalueindex(int i);

/// lua_upvaluejoin
@ffi.Native<
  ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int, ffi.Int, ffi.Int)
>()
external void flutter_lua_bridge_upvaluejoin(
  ffi.Pointer<lua_State> L,
  int fidx1,
  int n1,
  int fidx2,
  int n2,
);

/// lua_version
@ffi.Native<ffi.Double Function(ffi.Pointer<lua_State>)>()
external double flutter_lua_bridge_version(ffi.Pointer<lua_State> L);

/// lua_warning
@ffi.Native<
  ffi.Void Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>, ffi.Int)
>()
external void flutter_lua_bridge_warning(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> msg,
  int tocont,
);

/// lua_xmove
@ffi.Native<
  ffi.Void Function(ffi.Pointer<lua_State>, ffi.Pointer<lua_State>, ffi.Int)
>()
external void flutter_lua_bridge_xmove(
  ffi.Pointer<lua_State> from,
  ffi.Pointer<lua_State> to,
  int n,
);

/// lua_yield
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_yield(ffi.Pointer<lua_State> L, int nresults);

/// lua_yieldk
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Void>,
  )
>()
external int flutter_lua_bridge_yieldk(
  ffi.Pointer<lua_State> L,
  int nresults,
  int ctx,
  ffi.Pointer<ffi.Void> k,
);

/// luaL_addchar
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Char)>()
external void flutter_lua_bridgeL_addchar(ffi.Pointer<ffi.Void> B, int c);

/// luaL_addgsub
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external void flutter_lua_bridgeL_addgsub(
  ffi.Pointer<ffi.Void> B,
  ffi.Pointer<ffi.Char> s,
  ffi.Pointer<ffi.Char> p,
  ffi.Pointer<ffi.Char> r,
);

/// luaL_addlstring
@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, ffi.Size)
>()
external void flutter_lua_bridgeL_addlstring(
  ffi.Pointer<ffi.Void> B,
  ffi.Pointer<ffi.Char> s,
  int l,
);

/// luaL_addsize
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Size)>()
external void flutter_lua_bridgeL_addsize(ffi.Pointer<ffi.Void> B, int n);

/// luaL_addstring
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>()
external void flutter_lua_bridgeL_addstring(
  ffi.Pointer<ffi.Void> B,
  ffi.Pointer<ffi.Char> s,
);

/// luaL_addvalue
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void flutter_lua_bridgeL_addvalue(ffi.Pointer<ffi.Void> B);

/// luaL_alloc
@ffi.Native<
  ffi.Pointer<ffi.Void> Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Void>,
    ffi.Size,
    ffi.Size,
  )
>()
external ffi.Pointer<ffi.Void> flutter_lua_bridgeL_alloc(
  ffi.Pointer<ffi.Void> ud,
  ffi.Pointer<ffi.Void> ptr,
  int osize,
  int nsize,
);

/// luaL_argcheck
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
  )
>()
external void flutter_lua_bridgeL_argcheck(
  ffi.Pointer<lua_State> L,
  int cond,
  int arg,
  ffi.Pointer<ffi.Char> extramsg,
);

/// luaL_argerror
@ffi.Native<
  ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Char>)
>()
external int flutter_lua_bridgeL_argerror(
  ffi.Pointer<lua_State> L,
  int arg,
  ffi.Pointer<ffi.Char> extramsg,
);

/// luaL_argexpected
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
  )
>()
external void flutter_lua_bridgeL_argexpected(
  ffi.Pointer<lua_State> L,
  int cond,
  int arg,
  ffi.Pointer<ffi.Char> tname,
);

/// luaL_buffaddr
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>()
external ffi.Pointer<ffi.Char> flutter_lua_bridgeL_buffaddr(
  ffi.Pointer<ffi.Void> B,
);

/// luaL_buffinit
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Void>)>()
external void flutter_lua_bridgeL_buffinit(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> B,
);

/// luaL_buffinitsize
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Void>,
    ffi.Size,
  )
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridgeL_buffinitsize(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> B,
  int sz,
);

/// luaL_bufflen
@ffi.Native<ffi.Size Function(ffi.Pointer<ffi.Void>)>()
external int flutter_lua_bridgeL_bufflen(ffi.Pointer<ffi.Void> B);

/// luaL_buffsub
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>()
external void flutter_lua_bridgeL_buffsub(ffi.Pointer<ffi.Void> B, int n);

/// luaL_callmeta
@ffi.Native<
  ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Char>)
>()
external int flutter_lua_bridgeL_callmeta(
  ffi.Pointer<lua_State> L,
  int obj,
  ffi.Pointer<ffi.Char> e,
);

/// luaL_checkany
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridgeL_checkany(ffi.Pointer<lua_State> L, int arg);

/// luaL_checkinteger
@ffi.Native<ffi.Int64 Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridgeL_checkinteger(
  ffi.Pointer<lua_State> L,
  int arg,
);

/// luaL_checklstring
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridgeL_checklstring(
  ffi.Pointer<lua_State> L,
  int arg,
  ffi.Pointer<ffi.Size> l,
);

/// luaL_checknumber
@ffi.Native<ffi.Double Function(ffi.Pointer<lua_State>, ffi.Int)>()
external double flutter_lua_bridgeL_checknumber(
  ffi.Pointer<lua_State> L,
  int arg,
);

/// luaL_checkoption
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int flutter_lua_bridgeL_checkoption(
  ffi.Pointer<lua_State> L,
  int arg,
  ffi.Pointer<ffi.Char> def,
  ffi.Pointer<ffi.Pointer<ffi.Char>> lst,
);

/// luaL_checkstack
@ffi.Native<
  ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Char>)
>()
external void flutter_lua_bridgeL_checkstack(
  ffi.Pointer<lua_State> L,
  int sz,
  ffi.Pointer<ffi.Char> msg,
);

/// luaL_checkstring
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<lua_State>, ffi.Int)>()
external ffi.Pointer<ffi.Char> flutter_lua_bridgeL_checkstring(
  ffi.Pointer<lua_State> L,
  int arg,
);

/// luaL_checktype
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)>()
external void flutter_lua_bridgeL_checktype(
  ffi.Pointer<lua_State> L,
  int arg,
  int t,
);

/// luaL_checkudata
@ffi.Native<
  ffi.Pointer<ffi.Void> Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<ffi.Void> flutter_lua_bridgeL_checkudata(
  ffi.Pointer<lua_State> L,
  int ud,
  ffi.Pointer<ffi.Char> tname,
);

/// luaL_checkversion
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>)>()
external void flutter_lua_bridgeL_checkversion(ffi.Pointer<lua_State> L);

/// luaL_dofile
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)>()
external int flutter_lua_bridgeL_dofile(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> fn,
);

/// luaL_dostring
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)>()
external int flutter_lua_bridgeL_dostring(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> s,
);

/// luaL_error
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)>()
external int flutter_lua_bridgeL_error(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> fmt,
);

/// luaL_execresult
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridgeL_execresult(ffi.Pointer<lua_State> L, int stat);

/// luaL_fileresult
@ffi.Native<
  ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Char>)
>()
external int flutter_lua_bridgeL_fileresult(
  ffi.Pointer<lua_State> L,
  int stat,
  ffi.Pointer<ffi.Char> fname,
);

/// luaL_getmetafield
@ffi.Native<
  ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Char>)
>()
external int flutter_lua_bridgeL_getmetafield(
  ffi.Pointer<lua_State> L,
  int obj,
  ffi.Pointer<ffi.Char> e,
);

/// luaL_getmetatable
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)>()
external int flutter_lua_bridgeL_getmetatable(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> tname,
);

/// luaL_getsubtable
@ffi.Native<
  ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Char>)
>()
external int flutter_lua_bridgeL_getsubtable(
  ffi.Pointer<lua_State> L,
  int idx,
  ffi.Pointer<ffi.Char> fname,
);

/// luaL_gsub
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridgeL_gsub(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> s,
  ffi.Pointer<ffi.Char> p,
  ffi.Pointer<ffi.Char> r,
);

/// luaL_len
@ffi.Native<ffi.Int64 Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridgeL_len(ffi.Pointer<lua_State> L, int idx);

/// luaL_loadbuffer
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
  )
>()
external int flutter_lua_bridgeL_loadbuffer(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> buff,
  int sz,
  ffi.Pointer<ffi.Char> name,
);

/// luaL_loadbufferx
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external int flutter_lua_bridgeL_loadbufferx(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> buff,
  int sz,
  ffi.Pointer<ffi.Char> name,
  ffi.Pointer<ffi.Char> mode,
);

/// luaL_loadfile
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)>()
external int flutter_lua_bridgeL_loadfile(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> filename,
);

/// luaL_loadfilex
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external int flutter_lua_bridgeL_loadfilex(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> filename,
  ffi.Pointer<ffi.Char> mode,
);

/// luaL_loadstring
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)>()
external int flutter_lua_bridgeL_loadstring(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> s,
);

/// luaL_makeseed
@ffi.Native<ffi.Uint64 Function(ffi.Pointer<lua_State>)>()
external int flutter_lua_bridgeL_makeseed(ffi.Pointer<lua_State> L);

/// luaL_newlib
@ffi.Native<
  ffi.Void Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Void>, ffi.Int)
>()
external void flutter_lua_bridgeL_newlib(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> l,
  int nrec,
);

/// luaL_newlibtable
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridgeL_newlibtable(
  ffi.Pointer<lua_State> L,
  int nrec,
);
